implementacion del ticket 4 de backend
